samples/_failures_safe/1761306234_cf5aa1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1820a3e1.c: In function ‘main’:
./samples/SAFE/__tmp_1820a3e1.c:159:12: error: missing terminating " character
  159 |     printf("2: RLE\n
      |            ^~~~~~~~~
./samples/SAFE/__tmp_1820a3e1.c:159:5: error: expected expression at end of input
  159 |     printf("2: RLE\n
      |     ^~~~~~
./samples/SAFE/__tmp_1820a3e1.c:159:5: error: expected declaration or statement at end of input
